--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,28 @@
+# Gradle 배포판이 저장될 기본 디렉토리
+# GRADLE_USER_HOME은 사용자의 홈 디렉토리 내 .gradle 폴더를 의미
 distributionBase=GRADLE_USER_HOME
+
+# Gradle 배포판이 저장될 상대 경로
+# wrapper/dists 폴더에 다운로드된 Gradle 버전들이 저장됨
 distributionPath=wrapper/dists
+
+# 다운로드할 Gradle 버전의 URL
+# 현재 프로젝트는 Gradle 8.14.2 버전을 사용
+# -bin.zip은 바이너리 배포판 (소스코드 제외, 실행 파일만 포함)
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.2-bin.zip
+
+# 네트워크 타임아웃 설정 (밀리초 단위)
+# Gradle 배포판 다운로드 시 10초 동안 응답이 없으면 타임아웃
 networkTimeout=10000
+
+# 배포판 URL 유효성 검증 여부
+# true로 설정하면 다운로드 전에 URL이 유효한지 확인
 validateDistributionUrl=true
+
+# Gradle 배포판 압축파일이 저장될 기본 디렉토리
+# GRADLE_USER_HOME은 distributionBase와 동일한 값
 zipStoreBase=GRADLE_USER_HOME
+
+# Gradle 배포판 압축파일이 저장될 상대 경로
+# wrapper/dists 폴더에 zip 파일들이 저장됨
 zipStorePath=wrapper/dists
