--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -3,9 +3,9 @@ services:
     image: postgres:14
     container_name: erp-db
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-erpuser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-erppassword}
-      POSTGRES_DB: ${POSTGRES_DB:-erpdb}
+      POSTGRES_USER: erpuser
+      POSTGRES_PASSWORD: erppassword
+      POSTGRES_DB: erpdb
     ports:
       - "5432:5432"
     volumes:
