♻️ Application 코드 수정

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -34,13 +34,13 @@ spring:
     properties:
       hibernate:
         jdbc:
-          time-zone: UTC  # 일관성을 위해 JDBC 시간대를 UTC로 설정
-          batch-size: 50  # 삽입/수정 작업의 배치 크기
-          order-inserts: true  # 배치 최적화를 위해 삽입문 정렬
-          order-updates: true  # 배치 최적화를 위해 수정문 정렬
-        default-batch-fetch-size: 200  # 쿼리 최적화를 위한 배치 페치 크기
-        format-sql: true  # SQL을 보기 좋게 포맷팅 (로컬 개발용)
-        highlight-sql: true  # SQL 구문 하이라이팅 (로컬 개발용)
+          '[time-zone]': UTC  # 일관성을 위해 JDBC 시간대를 UTC로 설정
+          '[batch-size]': 50  # 삽입/수정 작업의 배치 크기
+          '[order-inserts]': true  # 배치 최적화를 위해 삽입문 정렬
+          '[order-updates]': true  # 배치 최적화를 위해 수정문 정렬
+        '[default-batch-fetch-size]': 200  # 쿼리 최적화를 위한 배치 페치 크기
+        '[format_sql]': true  # SQL을 보기 좋게 포맷팅 (로컬 개발용)
+        '[highlight_sql]': true  # SQL 구문 하이라이팅 (로컬 개발용)
     open-in-view: false  # 지연 로딩 문제 방지를 위해 Open Session in View 패턴 비활성화
 
 # 서버 설정
