--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -29,17 +29,17 @@ spring:
   # JPA 및 Hibernate 설정
   jpa:
     hibernate:
-      ddl-auto: update  # 테이블을 삭제하지 않고 데이터베이스 스키마 자동 업데이트
+      ddl-auto: update  # 테이블을 삭제하지 않고 스키마 업데이트
     properties:
       hibernate:
         jdbc:
-          '[time-zone]': UTC  # 일관성을 위해 JDBC 시간대를 UTC로 설정
-          '[batch-size]': 50  # 삽입/수정 작업의 배치 크기
-          '[order-inserts]': true  # 배치 최적화를 위해 삽입문 정렬
-          '[order-updates]': true  # 배치 최적화를 위해 수정문 정렬
-        '[default-batch-fetch-size]': 200  # 쿼리 최적화를 위한 배치 페치 크기
-        '[format_sql]': true  # SQL을 보기 좋게 포맷팅 (로컬 개발용)
-    open-in-view: false  # 지연 로딩 문제 방지를 위해 Open Session in View 패턴 비활성화
+          time_zone: UTC          # JDBC 시간대를 UTC로 통일
+          batch_size: 50          # INSERT/UPDATE 배치 크기
+          order_inserts: true     # 배치 최적화를 위해 INSERT 정렬
+          order_updates: true     # 배치 최적화를 위해 UPDATE 정렬
+        default_batch_fetch_size: 200  # 엔티티 컬렉션 페치(batch fetch) 크기
+        format_sql: true               # SQL을 보기 좋게 포맷팅
+    open-in-view: false  # 지연 로딩 문제 방지를 위해 Open Session in View 비활성화
 
 # 서버 설정
 server:
