--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,44 +1,57 @@
 {
-    // ===== Java 언어 서버 기본 설정 =====
-    "java.compile.nullAnalysis.mode": "automatic", // null 분석 자동 활성화
-    "java.configuration.updateBuildConfiguration": "automatic", // 빌드 설정 자동 업데이트
-    "java.codeGeneration.hashCodeEquals.useJava7Objects": true, // hashCode/equals 생성 시 Objects 클래스 사용
-    "java.codeGeneration.useBlocks": true, // 코드 생성 시 블록 구문 사용
-    // ===== 코드 정리 및 포맷팅 설정 =====
-    "java.saveActions.organizeImports": true, // 저장 시 imports 자동 정리
-    "editor.formatOnSave": true, // 저장 시 코드 자동 포맷팅
-    "editor.tabSize": 4, // 탭 크기 4칸
-    "editor.insertSpaces": true, // 탭 대신 스페이스 사용
-    "java.format.onType.enabled": true, // 타이핑 중 자동 포맷팅
-    "java.format.comments.enabled": true, // 주석 포맷팅 활성화
-    "java.codeGeneration.insertionLocation": "afterCursor", // 코드 생성 위치
-    "java.maxConcurrentBuilds": 1, // 빌드 성능 최적화
-    "[java]": {
-        "editor.tabSize": 4, // Java 파일 전용 탭 크기 4칸
-        "editor.insertSpaces": true,
-        "editor.detectIndentation": false, // 자동 들여쓰기 감지 비활성화
-        "editor.foldingImportsByDefault": true // Java 파일에서 imports 자동 접기
-    },
+    // Java Language Server 기본 설정
+    "java.compile.nullAnalysis.mode": "automatic", // null 분석 자동 활성화로 NullPointerException 미리 감지
+    "java.configuration.updateBuildConfiguration": "automatic", // build.gradle 변경 시 자동으로 프로젝트 재구성
+    "java.codeGeneration.hashCodeEquals.useJava7Objects": true, // hashCode/equals 생성 시 Objects.hash() 등 최신 방식 사용
+    "java.codeGeneration.useBlocks": true, // if문 등에서 중괄호 강제 사용 (코드 안정성 증대)
+    "java.codeGeneration.toString.codeStyle": "STRING_BUILDER_CHAINED", // toString() 생성 시 StringBuilder 체이닝 방식
+    "java.codeGeneration.insertionLocation": "afterCursor", // 자동 생성 코드를 커서 다음 위치에 삽입
+    "java.maxConcurrentBuilds": 1, // 동시 빌드 수 제한으로 메모리 사용량 최적화 및 안정성 향상
+    // 코드 자동 정리 및 포맷팅 설정
+    "editor.formatOnSave": true, // 파일 저장 시 자동으로 코드 포맷팅 실행 (Cmd+S 할 때마다 자동 정리)
+    "java.saveActions.organizeImports": true, // 저장 시 import문 자동 정리 (불필요한 import 제거, 순서 정렬)
     "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit", // imports 정리 명시적 실행
-        "source.removeUnusedImports": "explicit" // 사용되지 않는 imports 자동 제거
+        "source.organizeImports": "explicit", // import 정리를 명시적으로 실행
+        "source.removeUnusedImports": "explicit", // 사용하지 않는 import 자동 제거
+        "source.fixAll": "explicit" // 자동 수정 가능한 모든 문제점 수정 (Quick Fix 자동 적용)
     },
-    // ===== 사용되지 않는 코드 감지 설정 =====
-    "java.errors.incompleteClasspath.severity": "warning", // 불완전한 classpath 경고 표시
-    "java.sources.organizeImports.staticStarThreshold": 5, // static import * 사용 임계값
-    "java.sources.organizeImports.starThreshold": 99, // import * 사용 임계값 (거의 사용 안함)
-    // ===== IntelliJ처럼 사용되지 않는 코드를 회색으로 표시 =====
-    "editor.semanticHighlighting.enabled": true, // 의미론적 하이라이팅 활성화
-    // ===== 코드 접기 설정 =====
-    "editor.foldingImportsByDefault": true, // 파일 열 때 imports 자동 접기
-    "editor.showFoldingControls": "mouseover", // 마우스 오버 시에만 접기 컨트롤 표시
-    // ===== 추가 개발 편의 설정 =====
-    "java.quickfix.showAt": "problem", // 문제가 있는 곳에만 Quick Fix 표시
-    "java.completion.enabled": true, // 자동완성 활성화
-    "java.signatureHelp.enabled": true, // 메서드 시그니처 도움말 활성화
-    // ===== 프로젝트 구조 설정 =====
-    "java.project.sourcePaths": [
-        "src/main/java" // 메인 소스 경로
+    // 포맷팅 상세 설정
+    "java.format.enabled": true, // Java 코드 포맷팅 기능 활성화
+    "java.format.onType.enabled": true, // 타이핑 중 실시간 포맷팅 (세미콜론, 중괄호 입력 시 자동 정렬)
+    "java.format.comments.enabled": true, // 주석도 포맷팅 대상에 포함
+    "java.format.settings.profile": "GoogleStyle", // Google Java Style Guide 기반 포맷팅 (업계 표준)
+    // 들여쓰기 및 공백 설정
+    "editor.tabSize": 4, // 들여쓰기 크기 4칸 (Java 표준)
+    "editor.insertSpaces": true, // 탭 대신 스페이스 사용 (팀 협업 시 일관성 유지)
+    // 코드 정리 액션 (저장 시 자동 실행)
+    "java.cleanup.actions": [
+        "addOverride", // @Override 어노테이션 자동 추가
+        "addDeprecated", // @Deprecated 어노테이션 자동 추가
+        "stringConcatToTextBlock", // 문자열 연결을 Text Block으로 변환 (Java 13+)
+        "invertEquals", // equals 호출 시 null-safe 패턴으로 변경 ("str".equals(variable))
+        "addFinalModifier" // 가능한 곳에 final 키워드 자동 추가 (불변성 향상)
     ],
-    "java.project.outputPath": "build/classes" // 컴파일된 클래스 출력 경로
+    // Java 파일 전용 에디터 설정
+    "[java]": {
+        "editor.tabSize": 4, // Java 파일에서만 4칸 들여쓰기 강제
+        "editor.insertSpaces": true, // Java 파일에서만 스페이스 사용 강제
+        "editor.detectIndentation": false, // 기존 파일의 들여쓰기 스타일 무시하고 설정값 강제 적용
+        "editor.foldingImportsByDefault": true // Java 파일 열 때 import 구문 자동으로 접기
+    },
+    // Import 구문 관리
+    "java.errors.incompleteClasspath.severity": "warning", // 불완전한 classpath 경고로 표시
+    "java.sources.organizeImports.staticStarThreshold": 5, // static import가 5개 이상일 때 * 사용
+    "java.sources.organizeImports.starThreshold": 99, // 일반 import는 거의 * 사용 안 함 (가독성 향상)
+    // 코드 접기 및 UI 설정
+    "editor.showFoldingControls": "mouseover", // 마우스 오버 시에만 코드 접기 버튼 표시 (화면 정리)
+    // 개발 도움 기능
+    "editor.semanticHighlighting.enabled": true, // 의미론적 코드 하이라이팅 (변수/메서드 구분 색상)
+    "java.quickfix.showAt": "problem", // 문제가 있는 코드에만 Quick Fix 표시
+    "java.completion.enabled": true, // 자동완성 기능 활성화
+    "java.signatureHelp.enabled": true, // 메서드 매개변수 힌트 표시
+    // 프로젝트 구조 설정
+    "java.project.sourcePaths": [
+        "src/main/java" // 메인 소스코드 경로 지정
+    ],
+    "java.project.outputPath": "build/classes" // 컴파일된 .class 파일 출력 경로
 }
