--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit", // import 정리를 명시적으로 실행
         "source.removeUnusedImports": "explicit", // 사용하지 않는 import 자동 제거
-        "source.fixAll": "explicit" // 자동 수정 가능한 모든 문제점 수정 (Quick Fix 자동 적용)
+        "source.fixAll": "explicit", // 자동 수정 가능한 모든 문제점 수정 (Quick Fix 자동 적용)
+        "source.removeUnused": "explicit" // 사용하지 않는 변수, 메서드 등 감지 및 표시
     },
     // 포맷팅 상세 설정
     "java.format.enabled": true, // Java 코드 포맷팅 기능 활성화
@@ -36,7 +37,8 @@
         "editor.tabSize": 4, // Java 파일에서만 4칸 들여쓰기 강제
         "editor.insertSpaces": true, // Java 파일에서만 스페이스 사용 강제
         "editor.detectIndentation": false, // 기존 파일의 들여쓰기 스타일 무시하고 설정값 강제 적용
-        "editor.foldingImportsByDefault": true // Java 파일 열 때 import 구문 자동으로 접기
+        "editor.foldingImportsByDefault": true, // Java 파일 열 때 import 구문 자동으로 접기
+        "editor.showUnused": true // 사용하지 않는 변수, 메서드를 회색으로 표시
     },
     // Import 구문 관리
     "java.errors.incompleteClasspath.severity": "warning", // 불완전한 classpath 경고로 표시
@@ -49,6 +51,9 @@
     "java.quickfix.showAt": "problem", // 문제가 있는 코드에만 Quick Fix 표시
     "java.completion.enabled": true, // 자동완성 기능 활성화
     "java.signatureHelp.enabled": true, // 메서드 매개변수 힌트 표시
+    // 사용하지 않는 코드 감지 추가 설정
+    "java.eclipse.downloadSources": true, // 소스코드 다운로드로 정확한 참조 분석
+    "java.referencesCodeLens.enabled": true, // 참조 횟수 표시로 사용되지 않는 메서드 식별 
     // 프로젝트 구조 설정
     "java.project.sourcePaths": [
         "src/main/java" // 메인 소스코드 경로 지정
