--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,65 +1,120 @@
 {
-    // Java Language Server 기본 설정
-    "java.compile.nullAnalysis.mode": "automatic", // null 분석 자동 활성화로 NullPointerException 미리 감지
-    "java.configuration.updateBuildConfiguration": "automatic", // build.gradle 변경 시 자동으로 프로젝트 재구성
-    "java.codeGeneration.hashCodeEquals.useJava7Objects": true, // hashCode/equals 생성 시 Objects.hash() 등 최신 방식 사용
-    "java.codeGeneration.useBlocks": true, // if문 등에서 중괄호 강제 사용 (코드 안정성 증대)
-    "java.codeGeneration.toString.codeStyle": "STRING_BUILDER_CHAINED", // toString() 생성 시 StringBuilder 체이닝 방식
-    "java.codeGeneration.insertionLocation": "afterCursor", // 자동 생성 코드를 커서 다음 위치에 삽입
-    "java.maxConcurrentBuilds": 1, // 동시 빌드 수 제한으로 메모리 사용량 최적화 및 안정성 향상
-    // 코드 자동 정리 및 포맷팅 설정
-    "editor.formatOnSave": true, // 파일 저장 시 자동으로 코드 포맷팅 실행 (Cmd+S 할 때마다 자동 정리)
-    "java.saveActions.organizeImports": true, // 저장 시 import문 자동 정리 (불필요한 import 제거, 순서 정렬)
+    // -------------------------------------------------------------------------
+    // Java 핵심 설정 (Java Core Settings)
+    // -------------------------------------------------------------------------
+    // 컴파일 시 null 분석 모드를 자동으로 설정합니다.
+    "java.compile.nullAnalysis.mode": "automatic",
+    // 빌드 구성을 자동으로 업데이트합니다.
+    "java.configuration.updateBuildConfiguration": "automatic",
+    // 동시 빌드 작업 수를 제한합니다 (시스템 부하 감소).
+    "java.maxConcurrentBuilds": 1,
+    // Gradle 빌드 파일을 사용할지 여부 (Gradle 프로젝트에 권장)
+    "java.import.gradle.enabled": true,
+    "java.import.gradle.wrapper.enabled": true,
+    // -------------------------------------------------------------------------
+    // 코드 생성 설정 (Code Generation)
+    // -------------------------------------------------------------------------
+    // hashCode() 및 equals() 생성 시 Java 7+ Objects.hash 사용
+    "java.codeGeneration.hashCodeEquals.useJava7Objects": true,
+    // 코드 블록({ ... }) 사용 강제
+    "java.codeGeneration.useBlocks": true,
+    // toString() 생성 스타일: StringBuilder 체이닝 방식
+    "java.codeGeneration.toString.codeStyle": "STRING_BUILDER_CHAINED",
+    // 생성된 코드의 삽입 위치: 커서 다음
+    "java.codeGeneration.insertionLocation": "afterCursor",
+    // -------------------------------------------------------------------------
+    // 포맷팅 및 스타일 (Formatting & Style - Google Style Guide)
+    // -------------------------------------------------------------------------
+    // Java 포맷터 활성화
+    "java.format.enabled": true,
+    // Google Java Style Guide 적용
+    "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
+    "java.format.settings.profile": "GoogleStyle",
+    // 주석 포맷팅 활성화
+    "java.format.comments.enabled": true,
+    // 입력 시 자동 포맷팅 (선택 사항, 취향에 따라 false로 변경 가능)
+    "java.format.onType.enabled": true,
+    // -------------------------------------------------------------------------
+    // 에디터 동작 (Editor Actions - Save & Cleanup)
+    // -------------------------------------------------------------------------
+    // 저장 시 자동 포맷팅
+    "editor.formatOnSave": true,
+    // 저장 시 수행할 추가 작업
     "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit", // import 정리를 명시적으로 실행
-        "source.removeUnusedImports": "explicit", // 사용하지 않는 import 자동 제거
-        "source.fixAll": "explicit", // 자동 수정 가능한 모든 문제점 수정 (Quick Fix 자동 적용)
-        "source.removeUnused": "explicit" // 사용하지 않는 변수, 메서드 등 감지 및 표시
+        // 임포트 정리 (사용하지 않는 임포트 제거 및 정렬)
+        "source.organizeImports": "explicit",
+        // 기타 문제 자동 수정
+        "source.fixAll": "explicit"
     },
-    // 포맷팅 상세 설정
-    "java.format.enabled": true, // Java 코드 포맷팅 기능 활성화
-    "java.format.onType.enabled": true, // 타이핑 중 실시간 포맷팅 (세미콜론, 중괄호 입력 시 자동 정렬)
-    "java.format.comments.enabled": true, // 주석도 포맷팅 대상에 포함
-    "java.format.settings.profile": "GoogleStyle", // Google Java Style Guide 기반 포맷팅 (업계 표준)
-    // 들여쓰기 및 공백 설정
-    "editor.tabSize": 4, // 들여쓰기 크기 4칸 (Java 표준)
-    "editor.insertSpaces": true, // 탭 대신 스페이스 사용 (팀 협업 시 일관성 유지)
-    // 코드 정리 액션 (저장 시 자동 실행)
-    "java.cleanup.actions": [
-        "addOverride", // @Override 어노테이션 자동 추가
-        "addDeprecated", // @Deprecated 어노테이션 자동 추가
-        "stringConcatToTextBlock", // 문자열 연결을 Text Block으로 변환 (Java 13+)
-        "invertEquals", // equals 호출 시 null-safe 패턴으로 변경 ("str".equals(variable))
-        "addFinalModifier" // 가능한 곳에 final 키워드 자동 추가 (불변성 향상)
-    ],
-    // Java 파일 전용 에디터 설정
+    // -------------------------------------------------------------------------
+    // 에디터 UI 및 동작 (Editor UI & Behavior)
+    // -------------------------------------------------------------------------
+    // 탭 크기: 4칸
+    "editor.tabSize": 4,
+    // 탭 대신 스페이스 사용
+    "editor.insertSpaces": true,
+    // 파일 내용에 따른 들여쓰기 감지 비활성화 (설정된 값 강제)
+    "editor.detectIndentation": false,
+    // 코드 접기 컨트롤 표시: 마우스 오버 시
+    "editor.showFoldingControls": "mouseover",
+    // 시맨틱 하이라이팅(문맥 인식 색상) 활성화
+    "editor.semanticHighlighting.enabled": true,
+    // 괄호 쌍 색상 다르게 표시 (가독성 향상)
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs": true,
+    // 인레이 힌트 (파라미터 이름 등 표시) 활성화 - 코드 읽기에 매우 도움됨
+    "editor.inlayHints.enabled": "on",
+    // Java 전용 에디터 설정
     "[java]": {
-        "editor.tabSize": 4, // Java 파일에서만 4칸 들여쓰기 강제
-        "editor.insertSpaces": true, // Java 파일에서만 스페이스 사용 강제
-        "editor.detectIndentation": false, // 기존 파일의 들여쓰기 스타일 무시하고 설정값 강제 적용
-        "editor.foldingImportsByDefault": true, // Java 파일 열 때 import 구문 자동으로 접기
-        "editor.showUnused": true // 사용하지 않는 변수, 메서드를 회색으로 표시
+        "editor.defaultFormatter": "redhat.java",
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+        "editor.foldingImportsByDefault": true,
+        "editor.suggestSelection": "first"
     },
-    // Import 구문 관리
-    "java.errors.incompleteClasspath.severity": "warning", // 불완전한 classpath 경고로 표시
-    "java.sources.organizeImports.staticStarThreshold": 5, // static import가 5개 이상일 때 * 사용
-    "java.sources.organizeImports.starThreshold": 99, // 일반 import는 거의 * 사용 안 함 (가독성 향상)
-    // 코드 접기 및 UI 설정
-    "editor.showFoldingControls": "mouseover", // 마우스 오버 시에만 코드 접기 버튼 표시 (화면 정리)
-    // 개발 도움 기능
-    "editor.semanticHighlighting.enabled": true, // 의미론적 코드 하이라이팅 (변수/메서드 구분 색상)
-    "java.quickfix.showAt": "problem", // 문제가 있는 코드에만 Quick Fix 표시
-    "java.completion.enabled": true, // 자동완성 기능 활성화
-    "java.signatureHelp.enabled": true, // 메서드 매개변수 힌트 표시
-    // 사용하지 않는 코드 감지 추가 설정
-    "java.eclipse.downloadSources": true, // 소스코드 다운로드로 정확한 참조 분석
-    "java.referencesCodeLens.enabled": true, // 참조 횟수 표시로 사용되지 않는 메서드 식별 
-    // 프로젝트 구조 설정
-    "java.project.sourcePaths": [
-        "src/main/java" // 메인 소스코드 경로 지정
+    // -------------------------------------------------------------------------
+    // 임포트 및 자동완성 (Imports & Completion)
+    // -------------------------------------------------------------------------
+    // 자동완성 활성화
+    "java.completion.enabled": true,
+    // 메서드 인자 추측 활성화
+    "java.completion.guessMethodArguments": "insertBestGuessedArguments",
+    // 자주 사용하는 정적 멤버 즐겨찾기 (테스트 코드 작성 시 유용)
+    "java.completion.favoriteStaticMembers": [
+        "org.junit.Assert.*",
+        "org.junit.Assume.*",
+        "org.junit.jupiter.api.Assertions.*",
+        "org.junit.jupiter.api.Assumptions.*",
+        "org.mockito.Mockito.*",
+        "org.mockito.ArgumentMatchers.*"
     ],
-    "java.project.outputPath": "build/classes", // 컴파일된 .class 파일 출력 경로
-    // SQL 색상 설정 (Java text block 내 SQL 하이라이팅)
+    // 와일드카드(*) 임포트로 변환되는 기준 (99개 이상일 때만 * 사용 -> 사실상 항상 풀네임 사용)
+    "java.sources.organizeImports.starThreshold": 99,
+    "java.sources.organizeImports.staticStarThreshold": 5,
+    // 퀵픽(전구 아이콘) 표시 시점
+    "java.quickfix.showAt": "problem",
+    // 메서드 시그니처 도움말 활성화
+    "java.signatureHelp.enabled": true,
+    // 인레이 힌트 세부 설정 (Java)
+    "java.inlayHints.parameterNames.enabled": "all",
+    // -------------------------------------------------------------------------
+    // 탐색 및 참조 (Navigation & References)
+    // -------------------------------------------------------------------------
+    // 참조 수 표시 (Code Lens)
+    "java.referencesCodeLens.enabled": true,
+    // 구현체 수 표시 (Code Lens)
+    "java.implementationsCodeLens.enabled": true,
+    // 라이브러리 소스 코드 다운로드 (디버깅 시 유용)
+    "java.eclipse.downloadSources": true,
+    // -------------------------------------------------------------------------
+    // 디버깅 (Debugging)
+    // -------------------------------------------------------------------------
+    // 핫 코드 교체(Hot Code Replace) 자동 적용
+    "java.debug.settings.hotCodeReplace": "auto",
+    // -------------------------------------------------------------------------
+    // 시각적 사용자 정의 (Visual Customizations)
+    // -------------------------------------------------------------------------
+    // 텍스트 블록 내 SQL 하이라이팅 색상 지정
     "editor.tokenColorCustomizations": {
         "textMateRules": [
             {
@@ -70,4 +125,13 @@
             }
         ]
     },
+    // -------------------------------------------------------------------------
+    // 파일 인코딩 (File Encoding)
+    // -------------------------------------------------------------------------
+    // 기본 인코딩 UTF-8
+    "files.encoding": "utf8",
+    // 파일 열 때 인코딩 자동 감지
+    "files.autoGuessEncoding": true,
+    // 줄바꿈 문자 LF로 통일 (Git 협업 시 권장)
+    "files.eol": "\n"
 }
